refined error, refactored
