# backend/internal/entity/team_member.go
@@ -3,6 +3,7 @@ package entity
 import (
 	"time"
 
+	"github.com/google/uuid"
 	"github.com/sanekee/merchant-api/backend/internal/model"
 )
 
@@ -22,6 +23,27 @@ func TeamMemberFromSchema(from *model.TeamMember) *TeamMember {
 		Email:      from.Email,
 		CreatedAt:  from.CreatedAt,
 		UpdatedAt:  from.UpdatedAt,
+	}
+}
+
+func CreateTeamMemberFromNewSchema(from *model.NewTeamMember) *TeamMember {
+	now := time.Now().UTC()
+	return &TeamMember{
+		ID:         uuid.NewString(),
+		Email:      from.Email,
+		MerchantID: from.MerchantId,
+		CreatedAt:  &now,
+		UpdatedAt:  &now,
+	}
+}
+
+func TeamMemberFromUpdateSchema(id string, from *model.UpdateTeamMember) *TeamMember {
+	now := time.Now().UTC()
+	return &TeamMember{
+		ID:         id,
+		Email:      from.Email,
+		MerchantID: from.MerchantId,
+		UpdatedAt:  &now,
 	}
 }
 
